# test-crosscompile

./: CMakeLists.txt  apk.sh  build.sh  main.cpp  mainwindow.ui
android/: AndroidManifest.xml
kf5/: build.sh
